test_suite/tests/ui/type-attribute/from_self.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
#[serde(from = "Point")]
struct Point {}

fn main() {
}
